MFG Ready Version/force-app/main/default/objects/mfg_Service_Term_RuleSet__c/mfg_Service_Term_RuleSet__c.object-meta.xml
<CustomObject>
    <label>Service Term RuleSet</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Service Term RuleSet Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Term RuleSets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>