MFG Ready Version/force-app/main/default/objects/mfg_Service_Term_RuleSet__c/fields/mfg_Coverage_Action__c.field-meta.xml
<CustomField>
    <fullName>mfg_Coverage_Action__c</fullName>
    <label>Coverage Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Include</fullName>
            </value>
            <value>
                <fullName>Exclude</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>