MFG Ready Version/force-app/main/default/objects/mfg_Service_Term_RuleSet__c/fields/mfg_Defect_Code__c.field-meta.xml
<CustomField>
    <fullName>mfg_Defect_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Defect Code</label>
    <referenceTo>mfg_Defect_Code__c</referenceTo>
    <relationshipLabel>Service Term RuleSets</relationshipLabel>
    <relationshipName>Service_Term_RuleSets</relationshipName>
    <type>Lookup</type>
</CustomField>