MFG Ready Version/force-app/main/default/objects/mfg_Service_Term_RuleSet__c/fields/mfg_Priority__c.field-meta.xml
<CustomField>
    <fullName>mfg_Priority__c</fullName>
    <label>Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>