MFG Ready Version/force-app/main/default/objects/mfg_Service_Term_RuleSet__c/fields/mfg_Rule_Code__c.field-meta.xml
<CustomField>
    <fullName>mfg_Rule_Code__c</fullName>
    <formula>IF(
    ISBLANK(mfg_Service_Term__r.mfg_Service_Scope_Value__c),
    &quot;GEN&quot;,
    UPPER(
        LEFT(
            SUBSTITUTE(
                mfg_Service_Term__r.mfg_Service_Scope_Value__c,
                &quot; &quot;,
                &quot;&quot;
            ),
            3
        )
    )
)
&amp;
&quot; - &quot;
&amp;
Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rule Code</label>
    <type>Text</type>
</CustomField>