MFG Ready Version/force-app/main/default/objects/mfg_Service_Term_RuleSet__c/fields/mfg_Rule_Description__c.field-meta.xml
<CustomField>
    <fullName>mfg_Rule_Description__c</fullName>
    <formula>mfg_Defect_Code__r.mfg_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rule Description</label>
    <type>Text</type>
</CustomField>