MFG Ready Version/force-app/main/default/objects/mfg_Service_Term_RuleSet__c/fields/mfg_Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>mfg_Rule_Name__c</fullName>
    <label>Rule Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>