MFG Ready Version/force-app/main/default/objects/mfg_Service_Term_RuleSet__c/fields/mfg_Service_Term__c.field-meta.xml
<CustomField>
    <fullName>mfg_Service_Term__c</fullName>
    <label>Service Term</label>
    <referenceTo>mfg_Service_Term__c</referenceTo>
    <relationshipLabel>Service Term RuleSets</relationshipLabel>
    <relationshipName>Service_Term_RuleSets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>