MFG Ready Version/force-app/main/default/objects/mfg_Service_Term_RuleSet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>mfg_Rule_Code__c</columns>
    <columns>mfg_Rule_Name__c</columns>
    <columns>mfg_Service_Term__c</columns>
    <columns>mfg_Defect_Code__c</columns>
    <columns>mfg_Rule_Description__c</columns>
    <columns>mfg_Standard__c</columns>
    <columns>mfg_Coverage_Action__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>